fucntionality of aggregating Profiles generated from Rankings of Incomplete theory arguments